Z-index fixes

--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -4,5 +4,5 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    z-index: 1;
+    z-index: -1;
   }
