--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -6,5 +6,4 @@
     line-height: 96px;
     font-size: 102px;
     font-weight: bold;
-    z-index: 2;
   }
