--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -8,4 +8,5 @@
     position: relative;
     overflow: hidden;
     padding: 90px 0;
+    z-index: 1;
   }
