--- a/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
+++ b/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
@@ -1,5 +1,4 @@
 .section-subtitle_theme_dark {
     color: white;
     position: relative;
-    z-index: 1;
   }
