--- a/blocks/section-title/_theme/section-title_theme_dark.css
+++ b/blocks/section-title/_theme/section-title_theme_dark.css
@@ -2,5 +2,4 @@
     color: white;
     margin: 90px auto 0;
     position: relative;
-    z-index: 1;
   }
